Added unordered list
Added favourite sites in an unordered list.

--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
   <body>
     <h1> Hello, I am a web developer </h1>
     <img src="https://octodex.github.com/images/vinyltocat.png">
+    <h3>My favourite sites on internet</h3>
+      <ul>
+        <li>Linked In</li>
+        <li>Coursera</li>
+        <li>Udemy</li>
+        <li>Google</li>
+        <li>Stackoverflow</li>
+        <li>Github</li>
+      </ul>
   </body>
 </html>
