Added links to list items.
Added appropriate links to the sites mentioned in the list.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <img src="https://octodex.github.com/images/vinyltocat.png">
     <h3>My favourite sites on internet</h3>
       <ul>
-        <li>Linked In</li>
-        <li>Coursera</li>
-        <li>Udemy</li>
-        <li>Google</li>
-        <li>Stackoverflow</li>
-        <li>Github</li>
+        <li><a href="https://www.linkedin.com/in/parag-kumar-goyal-2483bb118/">Linked In</a></li>
+        <li><a href="https://www.coursera.org/">Coursera</a></li>
+        <li><a href="https://www.udemy.com/">Udemy</a></li>
+        <li><a href="https://www.google.com/">Google</a></li>
+        <li><a href="https://stackoverflow.com/">Stackoverflow</a></li>
+        <li><a href="https://www.github.com/paraggoyal28/">Github</a></li>
       </ul>
   </body>
 </html>
