--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1> Hello, I am a web developer </h1>
-    <img src="https://octodex.github.com/images/vinyltocat.png">
+    <img src="https://octodex.github.com/images/vinyltocat.png" alt="Image of vinyltocat">
     <h3>My favourite sites on internet</h3>
       <ul>
         <li><a href="https://www.linkedin.com/in/parag-kumar-goyal-2483bb118/">Linked In</a></li>
