--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title> My awesome web page </title>
     <link rel="stylesheet" href="style.css">
